# kaori

./: .gitignore  LICENSE  README.md
client/: next.config.mjs  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/about/: page.tsx
client/app/api/auth/[...nextauth]/: options.ts
client/app/pomodoro/: page.tsx
client/app/user/[userId]/analytics/: page.tsx
client/app/user/[userId]/tasks/: page.tsx
client/components/: analytics.tsx  chart.tsx  main-nav.tsx  site-header.tsx  tasks.tsx
client/config/: site.ts
client/lib/: convert.ts  delay.ts  determine-status.ts  initSupabase.ts  pomodoro-handlers.ts
client/styles/: globals.css
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/pomodoro/: page.tsx
frontend/app/user/[userId]/progress/: page.tsx
frontend/app/user/[userId]/tasks/: page.tsx
frontend/components/: customcard.tsx  icons.tsx  navbar.tsx  time-dropdown.tsx
frontend/config/: site.ts
frontend/public/: manifest.json  sw.js
frontend/styles/: globals.css
server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
server/migrations/: 20240118202213_init.down.sql  20240118202213_init.up.sql
server/src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
