[package]
name = "kaori-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
